--- a/Grid_Tests/UnderstandGridTemplate/6/imgInGrid.html
+++ b/Grid_Tests/UnderstandGridTemplate/6/imgInGrid.html
@@ -3,17 +3,21 @@
 <head>
 	<meta charset="UTF-8">
 	<title>CSS GRID</title>
-	<link rel="stylesheet" href="/Grid_Tests/UnderstandGridTemplate/5/resposiveAndAdaptable.css">
+	<link rel="stylesheet" href="/Grid_Tests/UnderstandGridTemplate/6/imgInGrid.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     <!--muchos divs pero es solo por tener el html y ver el ej-->
 	<div class="grid">
-		<div class="header">HEADER</div>
+		<div class="header">HEADER</div>    
 		<div class="nav">NAV</div>
 		<div class="principal">
-			<div class="caja1">CAJA1</div>
-			<div class="caja2">CAJA2</div>
+			<div class="caja1">CAJA1
+                <img src="https://cdn.pixabay.com/photo/2020/11/03/16/13/road-5710320__340.jpg" alt="">
+            </div>
+			<div class="caja2">CAJA2
+                <img src="https://cdn.pixabay.com/photo/2020/11/03/16/13/road-5710320__340.jpg" alt="">
+            </div>
 			<div class="caja3">CAJA3</div>
 
 		</div>
