html grid division

--- a/Grid_Tests/UnderstandGridTemplate/6/imgInGrid.html
+++ b/Grid_Tests/UnderstandGridTemplate/6/imgInGrid.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <!--muchos divs pero es solo por tener el html y ver el ej-->
-	<div class="grid">
+	<div class="grid"> <!---1 grid-->
 		<div class="header">HEADER</div>    
 		<div class="nav">NAV</div>
-		<div class="principal">
+		<div class="principal"> <!---2 grid-->
 			<div class="caja1">CAJA1
                 <img src="https://cdn.pixabay.com/photo/2020/11/03/16/13/road-5710320__340.jpg" alt="">
             </div>
-			<div class="caja2">CAJA2
+			<div class="caja2">CAJA2<!---3 grid-->
                 <img src="https://cdn.pixabay.com/photo/2020/11/03/16/13/road-5710320__340.jpg" alt="">
             </div>
 			<div class="caja3">CAJA3</div>
